# EXCEL_ANALYZER

./: CLAUDE.md  README.md  pyproject.toml
excel_analyzer/: Anexos_formulas.py  __init__.py  _core.py  _region_detector.py  chart_creator.py  chart_updater.py  formula_navigator.py  query_engine.py  table_builder.py  test_basico.py
excel_analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
