[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-analyzer"
version = "0.1.0"
description = "Detect and analyze tables in messy Excel files"
authors = [
    {name="Tu Nombre"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "pandas",
    "numpy",
    "openpyxl"
]

[tool.setuptools.packages.find]
where = ["."]